# weather-cli

./: .gitignore  Cargo.toml  README.md
data/: cities.json
src/: app.rs  cli.rs  config.rs  errors.rs  lib.rs  main.rs  output.rs
src/agent/: error.rs  mod.rs
src/database/: error.rs  mod.rs
src/database/migrations/: 001_initial.sql
src/database/model/: city.rs  forecast.rs  mod.rs
src/database/repository/: city.rs  forecast.rs  mod.rs
src/entity/: city.rs  coordinate.rs  forecast.rs  mod.rs
src/weather_api/: dto.rs  error.rs  mod.rs
tests/: cli.rs
